compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__arithmetic_op_idiv.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with all variant of numbers\n    var r : real\n    var i : int\n    var n : nat\n    var _rr := r div r\n    var _ri := r div i\n    var _ir := i div r\n    var _rn := r div n\n    var _nr := n div r\n    var _ii := i div i\n    var _in := i div n\n    var _ni := n div i\n    var _nn := n div n\n"
---
"r"@(FileId(1), 57..58) [ConstVar(Var, No)]: real
"i"@(FileId(1), 74..75) [ConstVar(Var, No)]: int
"n"@(FileId(1), 90..91) [ConstVar(Var, No)]: nat
"_rr"@(FileId(1), 106..109) [ConstVar(Var, No)]: int
"_ri"@(FileId(1), 129..132) [ConstVar(Var, No)]: int
"_ir"@(FileId(1), 152..155) [ConstVar(Var, No)]: int
"_rn"@(FileId(1), 175..178) [ConstVar(Var, No)]: int
"_nr"@(FileId(1), 198..201) [ConstVar(Var, No)]: int
"_ii"@(FileId(1), 221..224) [ConstVar(Var, No)]: int
"_in"@(FileId(1), 244..247) [ConstVar(Var, No)]: int
"_ni"@(FileId(1), 267..270) [ConstVar(Var, No)]: int
"_nn"@(FileId(1), 290..293) [ConstVar(Var, No)]: nat
"<root>"@(dummy) [Module(No)]: <error>

