compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__arithmetic_op_negate.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    var r : real\n    var i : int\n    var n : nat\n    var _r := - r\n    var _i := - i\n    var _n := - n\n    "
---
"r"@"src/main.t:9..10" [ConstVar(Var, No)]: real
"i"@"src/main.t:26..27" [ConstVar(Var, No)]: int
"n"@"src/main.t:42..43" [ConstVar(Var, No)]: nat
"_r"@"src/main.t:58..60" [ConstVar(Var, No)]: real
"_i"@"src/main.t:76..78" [ConstVar(Var, No)]: int
"_n"@"src/main.t:94..96" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
