compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__arithmetic_op_rem.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Compatibility with all variant of numbers\n    var r : real\n    var i : int\n    var n : nat\n    var _rr := r rem r\n    var _ri := r rem i\n    var _ir := i rem r\n    var _rn := r rem n\n    var _nr := n rem r\n    var _ii := i rem i\n    var _in := i rem n\n    var _ni := n rem i\n    var _nn := n rem n\n"
---
"r"@"src/main.t:57..58" [ConstVar(Var, No)]: real
"i"@"src/main.t:74..75" [ConstVar(Var, No)]: int
"n"@"src/main.t:90..91" [ConstVar(Var, No)]: nat
"_rr"@"src/main.t:106..109" [ConstVar(Var, No)]: real
"_ri"@"src/main.t:129..132" [ConstVar(Var, No)]: real
"_ir"@"src/main.t:152..155" [ConstVar(Var, No)]: real
"_rn"@"src/main.t:175..178" [ConstVar(Var, No)]: real
"_nr"@"src/main.t:198..201" [ConstVar(Var, No)]: real
"_ii"@"src/main.t:221..224" [ConstVar(Var, No)]: int
"_in"@"src/main.t:244..247" [ConstVar(Var, No)]: int
"_ni"@"src/main.t:267..270" [ConstVar(Var, No)]: int
"_nn"@"src/main.t:290..293" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
